style(all): 우아한테크코스 코드 스타일 적용 및 일부 warning 대응